# api-gateway

./: .gitignore  Dockerfile  compose.prod.example.yaml  compose.yaml  pyproject.toml  requirements.txt
protos/: Minio.proto
script/: generate_grpc_code.sh
src/: config.py  main.py
src/api/: routes.py  schemas.py
src/domain/: minio.py
src/grpc_client/: minio.py
